[tool.poetry]
name = "src"
version = "0.1.0"
description = "Taxi Prediction Service"
authors = ["WillNovus <gabrielwill666@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.10"
jupyter = "^1.0.0"
streamlit = "^1.29.0"
optuna = "^3.4.0"
comet-ml = "^3.35.4"
geopandas = "^0.14.1"
xgboost = "^2.0.2"
lightgbm = "^4.1.0"
python-dotenv = "^1.0.0"
plotly = "^5.18.0"
scikit-learn = "^1.3.2"
pathlib = "^1.0.1"
fire = "^0.5.0"
discordwebhook = "^1.0.3"
hsfs = "^3.4.5"
hopsworks = "^3.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
